<resources>
    <string name="app_name">PitjarusCodingTest</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="tv_keep_username">keep username</string>
    <string name="tv_check_update">Check Update</string>
    <string name="tv_login">Login</string>
    <string name="text_error_empty_field">input tidak boleh kosong</string>
    <string name="text_camera">Camera</string>
    <string name="cd_button_camera">button camera</string>
    <string name="cd_button_back">back button</string>
    <string name="text_finish">Selesai</string>
    <string name="text_reset">Reset</string>
    <string name="text_location_not_suitable">Lokasi Belum Sesuai</string>
    <string name="cd_button_refresh">Button refresh</string>
    <string name="text_main_menu">Main Menu</string>
    <string name="text_username_mitha">Mitha Khairulnisa</string>
    <string name="text_role">Role: {…}</string>
    <string name="text_nik">NIK. MD00001</string>
    <string name="text_current_visit">Kunjungan pada bulan Agustus 2023</string>
    <string name="text_150">150</string>
    <string name="text_total_nstore">Total\nStore</string>
    <string name="text_actual_nstore">Actual\nStore</string>
    <string name="text_50_percent">50%</string>
    <string name="text_percentage">Percentage</string>
    <string name="text_menu">Menu</string>
    <string name="text_kunjungan">Kunjungan</string>
    <string name="text_target_install_ncdfdpc">Target Install\nCDFDPC</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_transmission_nhistory">Transmission\nHistory</string>
    <string name="text_logout">Logout</string>
    <string name="cd_history_transmission_button">history transmission button</string>
    <string name="text_user_a">UserA</string>
    <string name="text_list_store">List Store</string>
    <string name="text_list_kunjungan_19_08_2023">List kunjungan 19–08–2023</string>
    <string name="text_st0001">ST0001</string>
    <string name="text_indomaret_komsen">Indomaret Komsen</string>
    <string name="text_cluster">Cluster : Small</string>
    <string name="text_tt_regular">TT Regular - ERTM Big - Pareto</string>
    <string name="text_info">Information</string>
    <string name="text_product_ncheck">Product\nCheck</string>
    <string name="text_sku_npromo">SKU\nPromo</string>
    <string name="text_ringkasan_noos">Ringkasan\nOOS</string>
    <string name="text_store_ninvestment">Store\nInvestment</string>
    <string name="text_dashboard_store">Dashboard Store</string>
    <string name="cd_button_information">button information</string>
    <string name="cd_button_sku_promo">button sku promo</string>
    <string name="cd_button_product_check">button product check</string>
    <string name="cd_button_store_invest">button store invest</string>
    <string name="cd_button_summary">button summary</string>
    <string name="text_1m">1m</string>
    <string name="text_perfect_store">Perfect store</string>
    <string name="text_toko_b">Toko B</string>
    <string name="text_address">Jalan pahlawan bukit biru</string>
    <string name="text_tipe_outlet">Tipe Outlet</string>
    <string name="text_title_tipe_display">Tipe Display</string>
    <string name="text_title_sub_tipe_display">Sub Tipe Display</string>
    <string name="text_ertm">ERTM</string>
    <string name="text_pareto">Pareto</string>
    <string name="text_e_merchandising">E-merchandising</string>
    <string name="text_last_visit">Last Visit</string>
    <string name="text_05_09_2023">05–09–2023</string>
    <string name="text_data_null">: (data)</string>
    <string name="text_yes">: Ya</string>
    <string name="text_no_visit">No Visit</string>
    <string name="text_visit">Visit</string>
    <string name="cd_button_target">button target</string>
    <string name="cd_button_navigation">button navigation</string>
    <string name="text_verifikasi_store">Verifikasi Store</string>
    <string name="text_image_preview">Image Preview</string>
    <string name="text_osa">OSA</string>
    <string name="text_currenet_month">September 2020</string>
    <string name="text_50">50%</string>
    <string name="text_target">Target</string>
    <string name="text_achievement">Pencapaian</string>
    <string name="text_40">40</string>
    <string name="text_20">20</string>
    <string name="text_npd">NPD</string>
    <string name="text_80">80%</string>
    <string name="text_100">100</string>
    <string name="text_80_">80</string>
</resources>